@@ -150,18 +150,6 @@ end_import
 
 begin_import
 import|import
-name|java
-operator|.
-name|util
-operator|.
-name|regex
-operator|.
-name|Pattern
-import|;
-end_import
-
-begin_import
-import|import
 name|org
 operator|.
 name|apache
@@ -6007,7 +5995,8 @@ name|distribSinglePass
 condition|)
 block|{
 name|String
-name|fl
+index|[]
+name|fls
 init|=
 name|rb
 operator|.
@@ -6016,7 +6005,7 @@ operator|.
 name|getParams
 argument_list|()
 operator|.
-name|get
+name|getParams
 argument_list|(
 name|CommonParams
 operator|.
@@ -6025,59 +6014,85 @@ argument_list|)
 decl_stmt|;
 if|if
 condition|(
-name|fl
-operator|==
-literal|null
-condition|)
-block|{
-if|if
-condition|(
-name|fields
-operator|.
-name|getRequestedFieldNames
-argument_list|()
-operator|==
+name|fls
+operator|!=
 literal|null
 operator|&&
-name|fields
+name|fls
 operator|.
-name|wantsAllFields
+name|length
+operator|>
+literal|0
+operator|&&
+operator|(
+name|fls
+operator|.
+name|length
+operator|!=
+literal|1
+operator|||
+operator|!
+name|fls
+index|[
+literal|0
+index|]
+operator|.
+name|isEmpty
 argument_list|()
+operator|)
 condition|)
 block|{
-name|fl
-operator|=
-literal|"*"
+comment|// If the outer request contains actual FL's use them...
+name|sreq
+operator|.
+name|params
+operator|.
+name|set
+argument_list|(
+name|CommonParams
+operator|.
+name|FL
+argument_list|,
+name|fls
+argument_list|)
 expr_stmt|;
 block|}
 else|else
 block|{
-name|fl
-operator|=
-literal|""
-expr_stmt|;
-for|for
-control|(
-name|String
-name|s
-range|:
-name|fields
+comment|// ... else we need to explicitly ask for all fields, because we are going to add
+comment|// additional fields below
+name|sreq
 operator|.
-name|getRequestedFieldNames
-argument_list|()
-control|)
-block|{
-name|fl
-operator|+=
-name|s
-operator|+
-literal|","
+name|params
+operator|.
+name|set
+argument_list|(
+name|CommonParams
+operator|.
+name|FL
+argument_list|,
+literal|"*"
+argument_list|)
 expr_stmt|;
 block|}
 block|}
-block|}
+name|StringBuilder
+name|additionalFL
+init|=
+operator|new
+name|StringBuilder
+argument_list|()
+decl_stmt|;
+name|boolean
+name|additionalAdded
+init|=
+literal|false
+decl_stmt|;
 if|if
 condition|(
+operator|!
+name|distribSinglePass
+operator|||
 operator|!
 name|fields
 operator|.
@@ -6086,94 +6101,63 @@ argument_list|(
 name|keyFieldName
 argument_list|)
 condition|)
-block|{
-comment|// the user has not requested the unique key but
-comment|// we still need to add it otherwise mergeIds can't work
+name|additionalAdded
+operator|=
+name|addFL
+argument_list|(
+name|additionalFL
+argument_list|,
+name|keyFieldName
+argument_list|,
+name|additionalAdded
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
-name|fl
+operator|(
+operator|!
+name|distribSinglePass
+operator|||
+operator|!
+name|fields
 operator|.
-name|endsWith
-argument_list|(
-literal|","
-argument_list|)
-condition|)
-block|{
-name|fl
-operator|+=
-name|keyFieldName
-expr_stmt|;
-block|}
-else|else
-block|{
-name|fl
-operator|+=
-literal|","
-operator|+
-name|keyFieldName
-expr_stmt|;
-block|}
-block|}
-name|sreq
-operator|.
-name|params
-operator|.
-name|set
-argument_list|(
-name|CommonParams
-operator|.
-name|FL
-argument_list|,
-name|updateFl
-argument_list|(
-name|fl
-argument_list|,
+name|wantsScore
+argument_list|()
+operator|)
+operator|&&
 name|shardQueryIncludeScore
-argument_list|)
+condition|)
+name|additionalAdded
+operator|=
+name|addFL
+argument_list|(
+name|additionalFL
+argument_list|,
+literal|"score"
+argument_list|,
+name|additionalAdded
 argument_list|)
 expr_stmt|;
-block|}
-else|else
-block|{
-comment|// in this first phase, request only the unique key field and any fields needed for merging.
 if|if
 condition|(
-name|shardQueryIncludeScore
+name|additionalAdded
 condition|)
-block|{
 name|sreq
 operator|.
 name|params
 operator|.
-name|set
+name|add
 argument_list|(
 name|CommonParams
 operator|.
 name|FL
 argument_list|,
-name|keyFieldName
-operator|+
-literal|",score"
+name|additionalFL
+operator|.
+name|toString
+argument_list|()
 argument_list|)
 expr_stmt|;
-block|}
-else|else
-block|{
-name|sreq
-operator|.
-name|params
-operator|.
-name|set
-argument_list|(
-name|CommonParams
-operator|.
-name|FL
-argument_list|,
-name|keyFieldName
-argument_list|)
-expr_stmt|;
-block|}
-block|}
 name|rb
 operator|.
 name|addRequest
@@ -6184,60 +6168,43 @@ name|sreq
 argument_list|)
 expr_stmt|;
 block|}
-DECL|method|updateFl
-name|String
-name|updateFl
+DECL|method|addFL
+specifier|private
+name|boolean
+name|addFL
 parameter_list|(
+name|StringBuilder
+name|fl
+parameter_list|,
 name|String
-name|originalFields
+name|field
 parameter_list|,
 name|boolean
-name|includeScoreIfMissing
+name|additionalAdded
 parameter_list|)
 block|{
 if|if
 condition|(
-name|includeScoreIfMissing
-operator|&&
-operator|!
-name|scorePattern
-operator|.
-name|matcher
-argument_list|(
-name|originalFields
-argument_list|)
-operator|.
-name|find
-argument_list|()
+name|additionalAdded
 condition|)
-block|{
-return|return
-name|originalFields
-operator|+
-literal|",score"
-return|;
-block|}
-else|else
-block|{
-return|return
-name|originalFields
-return|;
-block|}
-block|}
-DECL|field|scorePattern
-specifier|private
-specifier|static
-specifier|final
-name|Pattern
-name|scorePattern
-init|=
-name|Pattern
+name|fl
 operator|.
-name|compile
+name|append
 argument_list|(
-literal|"\\bscore\\b"
+literal|","
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+name|fl
+operator|.
+name|append
+argument_list|(
+name|field
+argument_list|)
+expr_stmt|;
+return|return
+literal|true
+return|;
+block|}
 DECL|method|mergeIds
 specifier|private
 name|void
